<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <TextView
        android:id="@+id/economy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/car_type"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/economy"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/ride_type" />

    <ImageView
        android:id="@+id/ubergo_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/ride"
        android:layout_marginStart="92dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:onClick="onClick"
        android:src="@drawable/ubergo"
        android:focusable="true" />


    <ImageView
        android:id="@+id/ubergo_logo2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/ride"
        android:layout_marginStart="225dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:onClick="onClick"
        android:src="@drawable/premier"
        android:focusable="true" />

    <TextView
        android:id="@+id/uberlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ubergo_logo"
        android:layout_marginStart="98dp"
        android:layout_marginTop="3dp"
        android:text="@string/uber_go"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/uberlogo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ubergo_logo2"
        android:layout_marginStart="230dp"
        android:layout_marginTop="3dp"
        android:text="@string/premier"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uberlogo"
        android:layout_marginStart="103dp"
        android:layout_marginTop="3dp"
        android:text="@string/rupees_1"
        android:textSize="8dp" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uberlogo2"
        android:layout_marginStart="235dp"
        android:layout_marginTop="3dp"
        android:text="@string/rupees_2"
        android:textSize="8dp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rate"
        android:text="Add payment"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/rate"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/payment"
        android:text="1-4"
        android:textAlignment="textEnd" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment"
        android:background="@color/black"
        android:text="Confirm Uber Go"
        android:textColor="@color/button_selected_car"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"

        />
</RelativeLayout>